--- a/views/sale.pug
+++ b/views/sale.pug
@@ -3,20 +3,21 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Receipt Generator
-  link(rel='stylesheet' href='../public/css/gen.css')
+  link(rel='stylesheet' href='/css/gen.css')
 .container
   h1 Record Sales
   // Form for generating a receipt
   form#receiptForm(action='' method='POST')
-    label(for='salesAgent') The sales Agent Name:
-    input#salesAgent(type='text' name='salesAgent' required='')
+    label(for='salesAgent') The Sales Agent Name:
+    input#salesAgent(type='text' name='salesAgent')
     label(for='transactionId') Transaction ID:
-    input#transactionId(type='text' name='transactionId' required='')
+    input#transactionId(type='text' name='transactionId')
     label(for='date') Date and Time:
-    input#date(type='datetime-local' name='date' required='')
+    input#date(type='datetime-local' name='datetime')
     label(for='customerName') Customer Name:
-    input#customerName(type='text' name='customerName' required='')
+    input#customerName(type='text' name='customerName')
     label(for='items') Items (format: Item, Quantity, Price):
-    textarea#items(name='items' rows='5' required='')
+    textarea#items(name='items' rows='5')
     button(type='button' onclick='generateReceipt()') Generate Receipt
-script(src='../public/js/gen.js')
+    a(href='/receipt.pug')
+script(src='/js/gen.js')
