--- a/views/product.pug
+++ b/views/product.pug
@@ -3,89 +3,89 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Landing Page
-  link(rel='stylesheet' href='/css/product.css')
+  link(rel='stylesheet', href='/css/product.css')
 header
   h1(style='text-align: center;') KGL GROCERY LTD PRODUCTS
 main
   section.stat-container
     .stat-card
-      img.stat-image(src='../public/images/redb4.jpg' alt='Image 2')
+      img.stat-image(src='/images/redb4.jpg' alt='Image 2')
       h3(style='text-align: center;') Red Beans
       p(style='text-align: center;')
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/blackb.jpg' alt='Image 2')
+      img.stat-image(src='/images/blackb.jpg' alt='Image 2')
       h3 Black Beans
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/whiteb.jpg' alt='Image 2')
+      img.stat-image(src='/images/whiteb.jpg' alt='Image 2')
       h3 White Beans
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/greenb.jpg' alt='Image 2')
+      img.stat-image(src='/images/greenb.jpg' alt='Image 2')
       h3 Green Beans
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/rice1.jpg' alt='Image 2')
+      img.stat-image(src='/images/rice1.jpg' alt='Image 2')
       h3 Rice F1
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/rice5.jpg' alt='Image 2')
+      img.stat-image(src='/images/rice5.jpg' alt='Image 2')
       h3 Rice
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/rice2.jpg' alt='Image 2')
+      img.stat-image(src='/images/rice2.jpg' alt='Image 2')
       h3 Rice
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/whitem.jpg' alt='Image 2')
+      img.stat-image(src='/images/whitem.jpg' alt='Image 2')
       h3 Maize
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/mz4.jpg' alt='Image 2')
+      img.stat-image(src='/images/mz4.jpg' alt='Image 2')
       h3 Maize
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/pmz.jpg' alt='Image 2')
+      img.stat-image(src='/images/pmz.jpg' alt='Image 2')
       h3 Maize
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/redgn2.jpg' alt='Image 2')
+      img.stat-image(src='/images/redgn2.jpg' alt='Image 2')
       h3 G-nuts
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/gn1.jpg' alt='Image 2')
+      img.stat-image(src='/images/gn1.jpg' alt='Image 2')
       h3 G-nuts
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/pn1.jpg' alt='Image 2')
+      img.stat-image(src='/images/pn1.jpg' alt='Image 2')
       h3 G-nuts
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/soyb1.jpg' alt='Image 2')
+      img.stat-image(src='/images/soyb1.jpg' alt='Image 2')
       h3 Soya Beans
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/soyb2.jpg' alt='Image 2')
+      img.stat-image(src='/images/soyb2.jpg' alt='Image 2')
       h3 Soya Beans
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/soya.jpg' alt='Image 2')
+      img.stat-image(src='/images/soya.jpg' alt='Image 2')
       h3 Soya Beans
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/cowp.jpg' alt='Image 2')
+      img.stat-image(src='/images/cowp.jpg' alt='Image 2')
       h3 Cow peas
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/cowps.jpg' alt='Image 2')
+      img.stat-image(src='/images/cowps.jpg' alt='Image 2')
       h3 Cow peas
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/cowps1.jpg' alt='Image 2')
+      img.stat-image(src='/images/cowps1.jpg' alt='Image 2')
       h3 Cow Peas
       p
     .stat-card(style='text-align: center;')
-      img.stat-image(src='../public/images/cowps1.jpg' alt='Image 2')
+      img.stat-image(src='/images/cowps1.jpg' alt='Image 2')
       h3 Cow peas
       p
 footer
