--- a/views/manager-dashboard.pug
+++ b/views/manager-dashboard.pug
@@ -3,42 +3,49 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Responsive Dashboard with Sidebar
-  link(rel='stylesheet' href='/bootstrap-5.3.3-dist/css/bootstrap.css')
-  link(rel='stylesheet' href='/css/manager-dashboard.css')
+  link(rel='stylesheet', href='/bootstrap-5.3.3-dist/css/bootstrap.css')
+  link(rel='stylesheet', href='/css/manager-dashboard.css')
 #sidebar
   button#toggle-btn(aria-label='Toggle sidebar') &#x2630;
   nav
     ul
       li
-        a(href='dashboard.html') Home
+        a(href='home') Home
       li
-        a(href='produce.pug') Produce Procured
+        a(href='stock') Produce Procured
       li
-        a(href='product.pug') Stock
+        a(href='cereal') Products
       li
-        a(href='index.pug') Logout
+        a(href='creditsale') Credit Sale
+      li
+        a(href='') Report
+      li
+        a.btn.btn-dark.btn-block(href="#" onclick="document.getElementById('logout-form').submit();") Log out
+        form#logout-form(method="post" action='/logout' style="display:none;")  
+
 #content
   header
     h1  Manager Dashboard
   main
-    .container
-      .row
-        .col-4
-          .stat-card
-            h3 Produce Procured
-            .count
-              span 20,000
-              p 10% increase
-        .col-4
-          .stat-card
-            h3 Total Sales | Daily
-            .count
-              span 500000(Ugx)
-              p Records
-        .col-4
-          .stat-card
-            h3 KGL Credit Sales | Daily
-            .count
-              span 5
-              p 3% increase
+   .container
+    .row
+      .col-4
+        .stat-card
+          h3 Produce Procured
+          .count
+            span 20,000
+            p 10% increase
+      .col-4
+        .stat-card
+          h3 Total Sales | Daily
+          .count
+            span 500,000 Ugx
+            p Records
+      .col-4
+        .stat-card
+          h3 KGL Credit Sales | Daily
+          .count
+            span 5
+            p 3% increase
+
 script(src='/js/manager-dashboard.js')
