--- a/views/producelist.pug
+++ b/views/producelist.pug
@@ -37,7 +37,7 @@ html
                 td #{produce.contact}
                 td #{produce.thePriceToBeSoldAt}
                 td
-                  a.btn.btn-primary.btn-sm(href='/add_sale/' +produce._id) Make Sale
+                  a.btn.btn-primary.btn-sm(href='/thesale') Make Sale
                 td
                   a.btn.btn-primary.btn-sm(href='/updateProduce/'+produce._id) Update
                 td
