--- a/views/register.pug
+++ b/views/register.pug
@@ -8,8 +8,7 @@ html(lang="en")
   body
     h2 Sign Up
     form(action="/signup" method="POST")
-      input(type="text" name="firstname" placeholder="Your First Name")
-      input(type="text" name="lastname" placeholder="Your Last Name")
+      input(type="text" name="username" placeholder="User Name")
       input(type="email" name="email" placeholder="Enter Email")
       select(name="role")
         option(value="" disabled selected) Select Your Role
