--- a/public/css/credit.css
+++ b/public/css/credit.css
@@ -1,14 +1,34 @@
-.container {
+body{
+    background-image: url(/images/6.jpg);
+    background-size: cover;
     max-width: 500px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding:20px;
     margin: 80px auto;
-    background-image: url();
-    align-items: center;
-
-
+    background-color: white;
+    text-align: center;
+    align-content: center
 }
+
+
+
+
+
+/* .container {
+    max-width: 500px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding:20px;
+    margin: 80px auto;
+    background-color: white;
+    text-align: center;
+    align-content: center;
+     */
+   
+    
+
+
 .produce-form{
     align-items: center;
     justify-content: center;
