--- a/public/css/creditlist.css
+++ b/public/css/creditlist.css
@@ -3,12 +3,15 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 20px;
+    background-image: url(/images/3.jpg);
+    background-size: cover;
 }
 
-h1 {
+h2 {
     text-align: center;
     color: #333;
 }
+
 
 table {
     width: 80%;
@@ -26,12 +29,12 @@ td {
 }
 
 th {
-    background-color: #04fe10;
+    background-color: #48A878;
     color: white;
 }
 
 tr:hover {
-    background-color: #04fe10;
+    background-color: #99CA9C;
 }
 
 .update-btn {
