--- a/public/css/gen.css
+++ b/public/css/gen.css
@@ -6,6 +6,8 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-image: url(/images/a.jpg);
+    background-size: cover;
 }
 
 .container {
