--- a/public/css/saleslist.css
+++ b/public/css/saleslist.css
@@ -3,6 +3,8 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 20px;
+    background-image: url(/images/b.jpg);
+    background-size: cover;
 }
 
 h1 {
