--- a/views/sales-agentdashboard.pug
+++ b/views/sales-agentdashboard.pug
@@ -84,7 +84,8 @@ nav.vertical-navbar
   a(href='logout') Logout
 .main-content
   h1 Welcome to the Page
-  p
-    | This is the main content area. The horizontal navbar is at the top, and the vertical navbar is on the left.
+  main.content
+      block content
+   
 script(src='/js/salesdashboard.js')
  
